<resources>
    <string name="app_name">MidTerm</string>
    <string name="btnAddImage">Add Image</string>
    <string name="btnChangeBG">Change Background</string>
    <string name="btnFinish">Finish</string>
    <string name="btnLogin">Login</string>
    <string name="btnReg">Register</string>
    <string name="btnLogout">Logout</string>
    <string name="btnPlayAgain">Play again</string>
    <string name="btnChangePass">Change password</string>
    <string name="btnExit">Exit</string>
    <string name="btnConfirm">Confirm</string>
    <string name="btnReset">Reset</string>
    <string name="forgotPass_txt">Fogot password?</string>
    <string name="image_msg">Please choose your Image</string>
    <string name="delete_msg">Delete Success</string>
    <string name="insert_complete_msg">Please enter complete information</string>
    <string name="wrong_username_password_msg">Wrong username or password</string>
    <string name="wrong_password_msg">Wrong password</string>
    <string name="password_existed">New and old password can not be the same</string>
    <string name="username_phone_not_founded">Username or Phone number not founded</string>
    <string name="login_success_msg">Login successfully</string>
    <string name="changePass_success_msg">Change password successfully</string>
    <string name="resetPass_success_msg">Reset password successfully</string>
    <string name="username_validate_msg">Username must be 3 to 15 characters long and can only contain letters, numbers, underscores, and hyphens</string>
    <string name="password_validate_msg">Password must be at 8 to 20 characters long and can only contain letters, numbers, underscores, and hyphens</string>
    <string name="phone_validate_msg">Phone number must start with 0 and others are from 0 to 9, long 10 numbers</string>
    <string name="username_existed_msg">Username existed</string>
    <string name="phone_used_msg">Phone used</string>
    <string name="confirm_msg">Confirmation password does not match</string>
    <string name="reg_success_msg">Registered successfully</string>
    <string name="failed_msg">Failed</string>
    <string name="new_record_msg">New record!!!</string>
    <string name="logout_msg">Logged out</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="confirm_hint">Confirm password</string>
    <string name="newPass_hint">New password</string>
    <string name="phone_hint">Phone number</string>
</resources>