<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ResetPassActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="Reset password"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_resetPass_password"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/edt_resetPass_confirm"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/confirm_hint"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_resetPass_exit"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#80251F"
            android:text="@string/btnExit"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/btn_resetPass_reset"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_resetPass_reset"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#80251F"
            android:text="@string/btnReset"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_resetPass_exit"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>