<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="Change Password"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_changePass_password"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/password_hint"
        android:inputType="text"
        android:password="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/edt_changePass_newPass"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/newPass_hint"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/edt_changePass_confirm"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/confirm_hint"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_changePass_exit"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="#80251F"
            android:text="Exit"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.003" />

        <Button
            android:id="@+id/btn_changePass_change"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#80251F"
            android:text="@string/btnChangePass"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/btn_changePass_exit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.003" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
